--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,5 +1,5 @@
-# .github/workflows/docker-publish.yml (最终修正版)
-name: Build and Push Docker Image
+# .github/workflows/docker-publish.yml (正确版本 - 推送到 GHCR)
+name: Build and Push Docker Image to GHCR
 
 on:
   push:
@@ -8,6 +8,11 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    # 【新增】授予 Actions 工作流写入 GitHub Packages 的权限
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,13 +23,14 @@ jobs:
           URL=$(curl -s "https://api.github.com/repos/${{ github.repository }}/releases/latest" | grep "browser_download_url.*camoufox-linux.tar.gz" | cut -d : -f 2,3 | tr -d '", ')
           echo "CAMOUFOX_URL=$URL" >> $GITHUB_ENV
 
-      - name: Log in to Docker Hub
+      # --- 【核心修改 1】登录到 GitHub Container Registry (ghcr.io) ---
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}         # 你的 GitHub 用户名, butteryiyi
+          password: ${{ secrets.GITHUB_TOKEN }} # 使用 GitHub 自动生成的安全令牌
 
-      # --- 新增：设置一个支持缓存的 Docker Buildx 构建器 ---
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -34,9 +40,10 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: butterfly188/web:latest
+          # --- 【核心修改 2】将镜像标签指向 ghcr.io ---
+          # ${{ github.repository }} 会自动变成 butteryiyi/web
+          tags: ghcr.io/${{ github.repository }}:latest 
           build-args: |
             CAMOUFOX_URL=${{ env.CAMOUFOX_URL }}
-          # 缓存功能现在可以正常工作了
           cache-from: type=gha
           cache-to: type=gha,mode=max
